syntax = "proto3";

option go_package = "common/user_service";

package user_service;

import "google/api/annotations.proto";

service CatalogueService{
  rpc CreateUser(CreateUserRequest) returns(CreateUserResponse) {
    option (google.api.http) = {
      post: "/register"
      body: "user"
    };
  }

}

message CreateUserRequest{
  User user = 1;
}

message CreateUserResponse{
  User user = 1;
}

message User {
  string firstName = 1;
  string lastName = 2;
  string username = 3;
  string email = 4;
  string password = 5;

}